# altbooster

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  altbooster  altbooster.desktop  gitignore  install.sh  pyproject.toml  uninstall.sh
.cursor/rules/: libadwaita-preferences-page.mdc
help/C/: amd.page  apps.page  davinci.page  extensions.page  flatpak.page  index.page  intel.page  maintenance.page  setup.page  terminal.page  timesync.page  tweaks.page
icons/hicolor/: index.theme
po/: altbooster.pot  ru.po
src/: altbooster.py  backend.py  config.py  dynamic_page.py  main.py  ui.py  widgets.py
src/altbooster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/builtin_actions/: __init__.py  amd.py  appearance.py  terminal.py
src/core/: backend.py  borg.py  btrfs.py  checks.py  config.py  mirror.py  packages.py  privileges.py  tweaks.py  update_security.py
src/modules/: amd.json  appearance.json  apps.json  maintenance.json  terminal.json
src/system/: borg.py  btrfs.py  checks.py  gsettings.py  packages.py  privileges.py  profile.py  tweaks.py
src/tabs/: amd.py  apps.py  davinci.py  extensions.py  flatpak.py  intel.py  maintenance.py  napd.py  scx_sched_ext.py  setup.py  terminal.py  terminal_actions.py  tweaks.py
src/tabs/timesync/: __init__.py  borg.py  manual.py  metadata.py  mirror.py  page.py  pickers.py  restore.py  schedule.py  snapshots.py  summary.py
src/ui/: __init__.py  amd_page.py  appearance_page.py  apps_page.py  borg_page.py  common.py  davinci_page.py  dialogs.py  dynamic_page.py  extensions_page.py  flatpak_page.py  global_search.py  help_altbooster.py  help_dialog.py  install_preview_dialog.py  intel_page.py  maintenance_page.py  profile_dialog.py  rows.py  setup_page.py  terminal_page.py  widgets.py  window.py
tests/: conftest.py  test_borg.py  test_mirror.py  test_update_security.py
