[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = "altbooster"
version = "5.6.3"
description = "Утилита настройки и обслуживания ALT Linux"
readme = "README.md"
license = "MIT"
authors = [{ name = "PLAFON" }]
requires-python = ">=3.11"

[project.urls]
Homepage   = "https://github.com/plafonlinux/altbooster"
Repository = "https://github.com/plafonlinux/altbooster"
Issues     = "https://github.com/plafonlinux/altbooster/issues"

[tool.setuptools.packages.find]
include = ['altbooster*']

[tool.setuptools.package-data]
"altbooster.modules" = ['*.json']
"altbooster.system" = ['*.tmp']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle + pyflakes + isort
ignore = ["E501"]                # длинные строки в bash-командах — допустимо

[tool.ruff.lint.per-file-ignores]
"altbooster/config.py" = ["E501"]      # bash-команды в APPS неизбежно длинные
