[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = "altbooster"
version = "5.7-alpha"
description = "Утилита настройки и обслуживания ALT Linux"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "PLAFON" }]
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.42",
]

[project.urls]
Homepage   = "https://github.com/plafonlinux/altbooster"
Repository = "https://github.com/plafonlinux/altbooster"
Issues     = "https://github.com/plafonlinux/altbooster/issues"

[project.scripts]
altbooster = "altbooster:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["altbooster"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "ui*", "tabs*", "modules*"]

[tool.setuptools.package-data]
"modules" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle + pyflakes + isort
ignore = ["E501"]                # длинные строки в bash-командах — допустимо

[tool.ruff.lint.per-file-ignores]
"src/tabs/apps.py" = ["E501"]
